[tool.poetry]
name = "fido2-hid-bridge"
version = "0.1.0"
description = ""
authors = ["Bryan Jacobs <b@q3q.us>"]
readme = "README.md"
packages = [{include = "fido2_hid_bridge"}]

[tool.poetry.dependencies]
python = "^3.12"
uhid = "^0.0.1"
fido2 = {extras = ["pcsc"], version = "^2.0.0"}
pyscard = "^2.0.0"

[tool.poetry.scripts]
fido2-hid-bridge = 'fido2_hid_bridge.bridge:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
